<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_KashiyamaPump" Id="{c252a3ee-f366-44ed-9d74-8c0f474d15b1}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_KashiyamaPump
VAR_IN_OUT
	{attribute 'pytmc' := '
    pv: 
	'}
	iq_stPump : ST_KashiyamaDryPump;
END_VAR
VAR_INPUT
	
END_VAR
VAR
	TONtmr : TON;
	resetTmr : TON;
	
	(* Output *)	
	q_xRunDO 	AT%Q*:	BOOL;
	q_xResetDo	AT%Q*: 	BOOL;
	q_xLspdDo	AT%Q*: 	BOOL;
	
(* Input *)
	i_xLocal	AT%I*:	BOOL;
	i_xAlarm	AT%I*:	BOOL;
	i_xWarning	AT%I*:	BOOL;
	i_xIsRun	AT%I*:	BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//Kashiyama Dry pump outputs at high level indicate no warning, no alarm and remotely
iq_stPump.xIlkOK := iq_stPump.i_xLocal AND iq_stPump.i_xWarning AND iq_stPump.i_xAlarm;

IF iq_stPump.xIlkOK THEN
	iq_stPump.q_xRunDO := iq_stPump.pv_xRunSW;
	ELSE
		iq_stPump.PV_xRunSW := FALSE;
        iq_stPump.q_xRunDO := FALSE;	
END_IF
 
iq_stPump.xLspd_IlkENA := iq_stPump.q_xRunDO;

IF iq_stPump.xLspd_IlkENA THEN
	iq_stPump.q_xLspdDo := iq_stPump.xLspdSW;
	ELSE
		iq_stPump.xLspdSW := FALSE;
        iq_stPump.q_xLspdDo := FALSE;	
END_IF

//resetTmr (In := iq_stPump.xResetSW, PT := T#2S);
//IF resetTmr.Q THEN
//	iq_stPump.xResetSW := FALSE;
//END_IF

iq_stPump.q_xResetDo := NOT iq_stPump.i_xIsRun AND iq_stPump.xResetSW;

//countdown Timer
TONtmr (IN := iq_stPump.i_xIsRun, PT := T#20S);
iq_stPump.RdyTmr := TO_REAL(TONtmr.PT) - TO_REAL(TONtmr.ET);


//Mapping
ACT_IO();]]></ST>
    </Implementation>
    <Action Name="ACT_IO" Id="{03052d11-e75b-497b-a08a-11e5ae7ae948}">
      <Implementation>
        <ST><![CDATA[(* Output *)	
	q_xRunDO 	:= iq_stPump.q_xRunDO;
	q_xResetDo := iq_stPump.q_xResetDo;;
	q_xLspdDo := iq_stPump.q_xLspdDo;;
	
(* Input *)
	iq_stPump.i_xLocal := i_xLocal;
	iq_stPump.i_xAlarm :=	i_xAlarm;
	iq_stPump.i_xWarning :=	i_xWarning;
	iq_stPump.i_xIsRun :=	i_xIsRun;]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_KashiyamaPump">
      <LineId Id="67" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="66" Count="0" />
      <LineId Id="22" Count="25" />
      <LineId Id="63" Count="2" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_KashiyamaPump.ACT_IO">
      <LineId Id="2" Count="8" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>